--- a/sections/lp-featured_product.liquid
+++ b/sections/lp-featured_product.liquid
@@ -95,6 +95,12 @@
 </div>
 
 <style>
+  sticky-header {
+    background: linear-gradient(90deg, #000, #000) !important;
+  }
+  sticky-header span {
+    color: white !important;
+  }
   .footer {
     background: linear-gradient(125deg, #000000, #2e0202) !important;
   }
