--- a/sections/home-quiz-cta.liquid
+++ b/sections/home-quiz-cta.liquid
@@ -1,5 +1,5 @@
 <div class="home-home-quiz-cta">
-  <img class="background_image" src="{{section.settings.bg_image | img_url: 'master'}}">
+  {% comment %} <img class="background_image" src="{{section.settings.bg_image | img_url: 'master'}}"> {% endcomment %}
   <div class="left-img">
     <img class="big-img" src="{{section.settings.image | img_url: 'master'}}" alt="Discreet Packaging">
     <div class="small-images-container">
@@ -94,6 +94,7 @@
     height: 470px;
     margin: 0;
     padding-top: 60px;
+    background-color: #f8f2fe;
   }
   .home-quiz-cta-heading {
     background: linear-gradient(90deg, #ef4d70 0%, #7313b8 100%);
