--- a/sections/home-discreet-packaging.liquid
+++ b/sections/home-discreet-packaging.liquid
@@ -45,6 +45,9 @@
     .discreet_mobile_image {
       display: flex;
     }
+    .home-discreet-packaging {
+      margin: 0;
+    }
     .home-discreet-packaging img {
       width: 100%;
     }
