minor changes done

--- a/sections/home-categories-section.liquid
+++ b/sections/home-categories-section.liquid
@@ -17,7 +17,7 @@
       <a href="{{ block.settings.collection }}">
         <img
           class="gender-category-block-arrow"
-          src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Group_257.png?v=1737632883"
+          src="https://cdn.shopify.com/s/files/1/0661/8336/4792/files/Untitled_design_8.png?v=1739338380"
         >
         <img src="{{ block.settings.image | img_url: 'master' }}">
         <p class="gender-category-heading">{{ block.settings.title }}</p>
@@ -72,10 +72,10 @@
     position: relative;
   }
   .home-gender-categories-container .gender-category-block-arrow {
-    width: 60px;
+    width: 40px;
     height: auto;
     position: absolute;
-    top: 220px;
+    top: 226px;
     right: 5px;
   }
   .gender-categories-loop-parent {
@@ -88,6 +88,7 @@
   }
   .home-gender-categories-container a img {
     width: 100%;
+    border-radius: 15px;
     height: auto;
   }
   .gender-category-heading {
@@ -122,7 +123,7 @@
       width: 44%;
     }
     .home-gender-categories-container .gender-category-block-arrow {
-      top: 174px;
+      top: 184px;
     }
     .home-gender-categories-right-image,
     .home-gender-categories-left-image {
