--- a/assets/custom.css
+++ b/assets/custom.css
@@ -69,7 +69,7 @@ slideshow-component .slider-counter__link--dots .dot {
 }
 
 .quick-add button {
-    background-color: #3F2D4B !important;
+    background: linear-gradient(90deg, rgba(103, 0, 192, 1), rgba(1, 0, 1, 1) 100%) !important;
     color: #ffffff !important;
     min-width: fit-content;
     width: fit-content;
@@ -92,7 +92,7 @@ slideshow-component .slider-counter__link--dots .dot {
 }
 
 .product-card-subeading {
-    color: #B089CC !important;
+    color: #5d00b9 !important;
     font-size: 1.4rem;
     letter-spacing: 0px;
     margin: 0 !important;
@@ -497,7 +497,7 @@ slideshow-component .slider-counter__link--dots .dot {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 50px;
+    gap: 40px;
     overflow-x: auto;
 }
 
@@ -623,7 +623,7 @@ slideshow-component .slider-counter__link--dots .dot {
 }
 
 .header-category img {
-    width: 75px;
+    width: 60px;
     height: auto;
     aspect-ratio: 1 / 1;
 }
