--- a/sections/home-circle-collections.liquid
+++ b/sections/home-circle-collections.liquid
@@ -1,26 +1,38 @@
 <div class="header-categories-container">
-  <a href="/collections/massagers">
+  <a href="/collections/for-him-1">
     <div class="header-category">
-      <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Group_276.png?v=1737752059">
-      <p>Massagers</p>
+      <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/For_Him.png?v=1739361332">
+      <p>For Him</p>
     </div>
   </a>
-  <a href="/collections/all-1">
+  <a href="/collections/new-launch">
     <div class="header-category">
-      <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Group_277.png?v=1737752059">
-      <p>All</p>
+      <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/New_Launch.png?v=1739361328">
+      <p>New Launch</p>
+    </div>
+  </a>
+  <a href="/collections/new-launch">
+    <div class="header-category">
+      <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/V-Day_Sasle.png?v=1739361328">
+      <p>Cum-aa-Sutra Sale</p>
+    </div>
+  </a>
+  <a href="/collections/sale">
+    <div class="header-category">
+      <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/4_7974c1f7-2f89-4dae-b551-9c432879127a.png?v=1739361329">
+      <p>Deals</p>
+    </div>
+  </a>
+  <a href="/collections/sale">
+    <div class="header-category">
+      <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Lubes.png?v=1739361332">
+      <p>Lubricants</p>
     </div>
   </a>
   <a href="/collections/bundles">
     <div class="header-category">
-      <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Group_278.png?v=1737752059">
+      <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Bundles.png?v=1739361334">
       <p>Bundles</p>
-    </div>
-  </a>
-  <a href="/collections/lubes">
-    <div class="header-category">
-      <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Group_279.png?v=1737752059">
-      <p>Lubes & Oils</p>
     </div>
   </a>
   {% comment %}
