--- a/snippets/product-variant-options.liquid
+++ b/snippets/product-variant-options.liquid
@@ -77,10 +77,20 @@
       additional_props: input_dataset
     %}
   {%- elsif picker_type == 'button' -%}
-    {%- assign color_mapping = 'baby pink:#ffc0cb,lime yellow:#dfff00,white:#fff,pale blue:#bbeaea,classic rose:#ce80bd,blue:#250084,red:#cf2b2c,copper:#8d6b6d,emerald green:#629689,midnight purple:#82367e,hot pink:#eab7b4'
+    {%- assign color_mapping = 'passionate plum:#cc8899,carmine:#ff0038,RUSIAN PINK:#ff007f,blue khalifa:#55e2e9,chocolate:#4b3530,blueberry:#6a8bba,raspberry:#ce444d,peach:#9a2924,baby pink:#ffc0cb,lime yellow:#dfff00,white:#fff,pale blue:#bbeaea,classic rose:#ce80bd,blue:#250084,red:#cf2b2c,copper:#8d6b6d,emerald green:#629689,midnight purple:#82367e,hot pink:#eab7b4'
       | split: ','
     -%}
     <style>
+        .size-div{
+          border-radius:10px !important;
+          border: solid 1px #b16ef4 !important;
+          color: #000;
+          background: #b16ef450 !important;
+          width: fit-content !important;
+          height: fit-content !important;
+          padding: 2px 10px;
+          font-size: 1.4rem;
+        }
         .variant-div {
             display: inline-block;
             height: 30px;
