minor changes done

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -111,7 +111,7 @@ slideshow-component .slider-counter__link--dots .dot {
 }
 
 .price-dropped-product-card {
-    color: #382D43 !important;
+    color: #5d00b9 !important;
     font-weight: 600;
     font-size: 1.3rem !important;
     margin: 7px 0 !important;
